--- a/Workbooks/Figure4B.nb.html
+++ b/Workbooks/Figure4B.nb.html
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:6ae1c241cf0766717425ba4a564316f683bb2a51e88f6b36d1edf54b50a1d86b
-size 68319984
+oid sha256:21fd7c24bd73d899bda41b659f6f247b5c5979a8316c91a1522b66d737d32be1
+size 921616
